# t-courses

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: __init__.py  settings.py
app/ejudge/: registration.py
app/engine/: auth_storage.py  config_loader.py  lang.py  mail_sender.py  renderer.py
app/routers/: api_admin.py  api_auth.py  api_ejudge.py  api_webutils.py  authenticator.py  web_home.py
app/storage/: keyval.py  user.py  user_storage.py
resources/scripts/: standings.js
resources/templates/: base.j2
secrets/: example.env
