[project]
name = "t-courses"
version = "0.1.0"
description = "LMS platform with leaderboards, course management, and progress tracking. Powers algocourses.ru and t-edu.tech"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql==0.3.2",
    "fastapi==0.133.1",
    "pydantic==2.12.5",
    "loguru==0.7.3",
    "uvicorn==0.41.0",
    "aiohttp==3.13.3",
    "botocore==1.42.57",
    "jinja2==3.1.6",
    "prometheus-client==0.24.1",
    "python-dotenv==1.2.1",
    "typing_extensions==4.15.0",
    "starlette==0.52.1",
    "GitPython==3.1.46",
    "markdown-it-py==4.0.0",
    "pymongo==4.16.0",
]
